# pyproject-ls

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cache.rs  completion.rs  main.rs  pypi.rs  types.rs
