[package]
authors = [ "Dan Sully" ]
description = "Pyproject Language Server"
edition = "2024"
homepage = "https://github.com/dsully/pyproject-ls"
keywords = [ "pyproject", "python" ]
license = "MIT"
name = "pyproject-ls"
readme = "README.md"
repository = "https://github.com/dsully/pyproject-ls"
version = "0.0.1"

[dependencies]
anyhow = "1"
directories = "6.0"
dirs = "6"
futures = "0.3"
itertools = "0.14"
jiff = { version = "0.2.15", features = [ "serde" ] }
moka = { version = "0.12", features = [ "future" ] }
pep440_rs = "0.7.3"
pep508_rs = "0.9.2"
pyproject-toml = "0.13.6"
regex = "1"
reqwest = { version = "0", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1", features = [ "full" ] }
toml_edit = "0.22.27"
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
url = "2.5.7"
urlencoding = "2.1"

[dev-dependencies]
rstest = "0.25"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }

# https://stackoverflow.com/a/74545562/81120
[lints.clippy]
all = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Allowed lints
cargo_common_metadata = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }

# Warn-level lints
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[profile.release]
# Reduce the binary size
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#reduce-parallel-code-generation-units-to-increase-optimization
codegen-units = 1

# https://doc.rust-lang.org/rustc/codegen-options/index.html#debuginfo
debug = "line-tables-only"

# https://doc.rust-lang.org/rustc/codegen-options/index.html#incremental
incremental = true

# https://doc.rust-lang.org/rustc/codegen-options/index.html#lto
lto = "thin"

# https://doc.rust-lang.org/rustc/codegen-options/index.html#strip
strip = "debuginfo"

[profile.dev]
debug = 0
strip = "debuginfo"

  [profile.dev.package."*"]
  opt-level = 3
